paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/statements/return_1/sample_005/target.compile.log
error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/statements/return_1/sample_005/target.rs:10:26
   |
10 |     buf.copy_from_slice(&G[offset..offset + 8]);
   |                          ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/statements/return_1/sample_005/target.rs:16:5
   |
16 |     G[offset..offset + 8].copy_from_slice(&buf);
   |     ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.